--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
-title: CLiCKS - Connecting Logistics interfaces, Converters, Knowledge and Standards
-description: Small and Medium-sized Enterprises (SMEs) in logistics experience practical barriers when trying to use, exchange, share, and exploit real-time data in their operational processes. Such barriers include the abundance of proprietary data formats and schemes, the cost of implementing standards, the lack of trust among partners, the lack of IT expertise, and the uncertainty about benefits and return on investments. CLiCKS is a recently started research project that aims at lowering these barriers. The core proposition revolves around the application of a federated approach based on the concepts of the International Data Space (IDS).
+title: CLiCKS
+description: Connecting Logistics interfaces, Converters, Knowledge and Standards
