--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: CLiCKS
 description: Connecting Logistics interfaces, Converters, Knowledge and Standards
+show_downloads: false
