Set theme jekyll-theme-architect

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-architect
 title: CLiCKS
 description: Connecting Logistics interfaces, Converters, Knowledge and Standards
 show_downloads: false
